--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@metamask/onboarding": "^1.0.1",
     "axios": "^1.3.4",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
